<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_save_vuelta"
        android:icon="@drawable/ic_save_tanda"
        android:orderInCategory="100"
        android:title="@string/action_save_vuelta"
        app:showAsAction="always|withText" />



    <item
        android:id="@+id/action_edit_vuelta"
        android:icon="@drawable/ic_editar_tanda"
        android:orderInCategory="100"
        android:title="@string/action_editar_vuelta"
        app:showAsAction="always|withText" />




    <item
        android:id="@+id/action_finish_evento"
        android:orderInCategory="100"
        android:title="@string/action_finish_evento"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_avaible_evento"
        android:orderInCategory="100"
        android:title="@string/action_avaible_evento"
        app:showAsAction="never" />



</menu>