<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context="com.example.prueba_de_modulos.CombustibleEstadisticas">



    <item
        android:id="@+id/action_gasto_combustible_por_mes"
        android:orderInCategory="100"
        android:title="@string/action_gc_mes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_gasto_combustible_por_seis_meses"
        android:orderInCategory="100"
        android:title="@string/action_gc_seis_meses"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_gasto_combustible_por_anio"
        android:orderInCategory="100"
        android:title="@string/action_gc_anio"
        app:showAsAction="never" />

</menu>