<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/hint_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        android:orderInCategory="1"/>


    <item
        android:id="@+id/action_save_changes"
        android:icon="@drawable/ic_save_tanda"
        android:orderInCategory="2"
        android:title="@string/action_save_changes_erep"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/editar_item_evento"
        android:icon="@drawable/ic_editar_tanda"
        android:title="@string/action_editar_item_evento"
        app:showAsAction="never"
        android:orderInCategory="3"/>

</menu>

